Fix top controls spacing issue when widgetizing reports

--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -668,7 +668,7 @@ td.cellSubDataTable .loadingPiwik {
     display: none;
   }
 
-  .dataTable.dataTableVizHtmlTable .dataTableWrapper & {
+  .widgetized .dataTable.dataTableVizHtmlTable .dataTableWrapper & {
     margin-top: 0;
   }
 }
